--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header class="m-auto pb-20 lg:w-3/4 ">
         <div class="navbar bg-base-100">
             <div class="navbar-start">
-              <a class="btn btn-ghost text-xl">Hockey's</a>
+              <h1 class="font-extrabold">Hockey's</h1>
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
@@ -54,13 +54,37 @@
             </div>
           </div>
     </header>
-
-    <main class="m-auto lg:w-3/4">
-        <h1>hhhhhhhhehooooooooooo</h1>
-
-
-
+    <main class="m-auto lg:w-3/4 pb-20">
+        <img src="Images/1.png" alt="">
     </main>
+    <!-- Professional Hockeys Club -->
+    <section class="m-auto pb-20 lg:w-3/4 ">
+      <div>
+        <h1>Professional Hockeys Club</h1>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      </div>
+      <div class="text-center">
+        <div class="radial-progress" style="--value:87; color: #FF4240;" role="progressbar"><span style="color: black;">87%</span></div>
+        <div class="radial-progress" style="--value:95;" role="progressbar">95%</div>
+        <div class="radial-progress" style="--value:90;" role="progressbar">90%</div>
+        <div class="radial-progress" style="--value:80;" role="progressbar">80%</div>
+      </div>
+    </section>
+    <!-- Program Sections -->
+    <section>
+      <div>
+        <h1>Program Sections</h1>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      </div>
+      <div class="flex">
+        <div><img src="Images/2.png" alt=""></div>
+        <div><img src="Images/3.png" alt=""></div>
+      </div>
+      <div>
+        <div><img src="Images/4.png" alt=""></div>
+      </div>
+    </section>
+        <!-- Our New Products -->
     
     <footer>
 
