--- a/index.html
+++ b/index.html
@@ -30,177 +30,179 @@
 
 
     </style>
-
-
 </head>
+
 <body>
-    <header class="m-auto pb-20 lg:w-3/4 ">
-        <div class="navbar bg-base-100">
-            <div class="navbar-start">
-              <h1 class="font-extrabold">Hockey's</h1>
+    <div class="m-auto pb-50 lg:w-3/4 ">
+        <header>
+          <div class="navbar bg-base-100">
+              <div class="navbar-start">
+                <h1 class="font-extrabold">Hockey's</h1>
+              </div>
+              <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1">
+                  <li><a>Home</a></li>
+                  <li><a>About</a></li>
+                  <li><a>Pages</a></li>
+                  <li><a>Blog</a></li>
+                  <li><a>Contact</a></li>
+                </ul>
+              </div>
+              <div class="navbar-end">
+                  <img class="w-10 h-10" src="Images/search-bar-icon-png-16.png" alt="">
+                <a class="btn">Get Ticket</a>
+              </div>
             </div>
-            <div class="navbar-center hidden lg:flex">
-              <ul class="menu menu-horizontal px-1">
-                <li><a>Home</a></li>
-                <li><a>About</a></li>
-                <li><a>Pages</a></li>
-                <li><a>Blog</a></li>
-                <li><a>Contact</a></li>
-              </ul>
-            </div>
-            <div class="navbar-end">
-                <img class="w-10 h-10" src="Images/search-bar-icon-png-16.png" alt="">
-              <a class="btn">Get Ticket</a>
-            </div>
-          </div>
-    </header>
-    <main class="m-auto lg:w-3/4 pb-20">
-        <img src="Images/1.png" alt="">
-    </main>
-    <!-- Professional Hockeys Club -->
-    <section class="m-auto pb-20 lg:w-3/4 ">
-      <div>
-        <h1>Professional Hockeys Club</h1>
-        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-      </div>
-      <div class="text-center">
-        <div class="radial-progress" style="--value:87; color: #FF4240;" role="progressbar"><span style="color: black;">87%</span></div>
-        <div class="radial-progress" style="--value:95;" role="progressbar">95%</div>
-        <div class="radial-progress" style="--value:90;" role="progressbar">90%</div>
-        <div class="radial-progress" style="--value:80;" role="progressbar">80%</div>
-      </div>
-    </section>
-    <!-- Program Sections -->
-    <section>
-      <div>
-        <h1>Program Sections</h1>
-        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-      </div>
-      <div class="flex">
-        <div><img src="Images/2.png" alt=""></div>
-        <div><img src="Images/3.png" alt=""></div>
-      </div>
-      <div>
-        <div><img src="Images/4.png" alt=""></div>
-      </div>
-    </section>
-        <!-- Our New Products -->
-    <section>
-      <div>
-        <h1>Our New Products</h1>
-        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-      </div>
-      <div>
+      </header>
+      <main>
+          <img src="Images/1.png" alt="">
+      </main>
+      <!-- Professional Hockeys Club -->
+      <section>
+        <div>
+          <h1>Professional Hockeys Club</h1>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <div class="text-center">
+          <div class="radial-progress" style="--value:87; color: #FF4240;" role="progressbar"><span style="color: black;">87%</span></div>
+          <div class="radial-progress" style="--value:95;" role="progressbar">95%</div>
+          <div class="radial-progress" style="--value:90;" role="progressbar">90%</div>
+          <div class="radial-progress" style="--value:80;" role="progressbar">80%</div>
+        </div>
+      </section>
+      <!-- Program Sections -->
+      <section>
+        <div>
+          <h1>Program Sections</h1>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
         <div class="flex">
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="Images/5.png" alt=""/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
+          <div><img src="Images/2.png" alt=""></div>
+          <div><img src="Images/3.png" alt=""></div>
+        </div>
+        <div>
+          <div><img src="Images/4.png" alt=""></div>
+        </div>
+      </section>
+          <!-- Our New Products -->
+      <section>
+        <div>
+          <h1>Our New Products</h1>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <div>
+          <div class="flex">
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure><img src="Images/5.png" alt=""/></figure>
+              <div class="card-body">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Watch</button>
+                </div>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure><img src="Images/6.png" alt=""/></figure>
+              <div class="card-body">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Watch</button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="Images/6.png" alt=""/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
+          <div class="flex">
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure><img src="Images/7.png" alt=""/></figure>
+              <div class="card-body">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Watch</button>
+                </div>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure><img src="Images/8.png" alt="Movie"/></figure>
+              <div class="card-body">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Watch</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex">
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure><img src="Images/9.png" alt="Movie"/></figure>
+              <div class="card-body">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Watch</button>
+                </div>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure><img src="Images/10.png" alt="Movie"/></figure>
+              <div class="card-body">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Watch</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="flex">
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="Images/7.png" alt=""/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
-              </div>
-            </div>
-          </div>
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="Images/8.png" alt="Movie"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
-              </div>
+      </section>
+      <!-- client's question -->
+      <section>
+        <div class="hero min-h-screen">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <h1 class="text-5xl font-bold">Box Office News!</h1>
+              <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn btn-primary">Get Started</button>
             </div>
           </div>
         </div>
-        <div class="flex">
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="Images/9.png" alt="Movie"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
-              </div>
-            </div>
-          </div>
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="Images/10.png" alt="Movie"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
-              </div>
-            </div>
-          </div>
+      </section>
+      <!-- Get In Touch -->
+      <section>
+        <div>
+          <h1>Get In Touch</h1>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
-      </div>
-    </section>
-    <!-- client's question -->
-    <section>
-      <div class="hero min-h-screen">
-        <div class="hero-content flex-col lg:flex-row">
-          <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+        <div class="flex">
           <div>
-            <h1 class="text-5xl font-bold">Box Office News!</h1>
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <button class="btn btn-primary">Get Started</button>
+            <h1>Phone Number : 
+              (+62) 123-321-543</h1>
+          </div>
+          <div>
+            <div  class="flex"> 
+              <div> <h1>Your Name</h1></div>
+              <div> <h1>Your Name</h1></div>
+            </div>
+            <div>Send Message</div>
+            
           </div>
         </div>
-      </div>
-    </section>
-    <!-- Get In Touch -->
-    <section>
-      <div>
-        <h1>Get In Touch</h1>
-        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-      </div>
-      <div class="flex">
         <div>
-          <h1>Phone Number : 
-            (+62) 123-321-543</h1>
-        </div>
-        <div>
-          <div  class="flex"> 
-            <div> <h1>Your Name</h1></div>
-            <div> <h1>Your Name</h1></div>
+          <h1>Socical Media</h1>
+          <div class="grid grid-flow-col gap-4">
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a>
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
           </div>
-          <div>Send Message</div>
-          
         </div>
-      </div>
-      <div>
-        <h1>Socical Media</h1>
-        <div class="grid grid-flow-col gap-4">
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a>
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
+
     <footer>
       <footer class="footer p-10 bg-base-200 text-base-content">
         <aside>
