--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
             </div>
       </header>
       <main>
-          <img src="Images/1.png" alt="">
+          <img class="sm: w-1/5 lg: w-full" src="Images/1.png" alt="">
       </main>
-      <!-- Professional Hockeys Club -->
+      <!-- Section-3 Professional Hockeys Club -->
       <section class="pt-20">
         <div class="text-center pb-10">
           <h1 class="font-extrabold text-4xl pb-5">Professional Hockeys Club</h1>
           <p class="text-base font-medium" style="color: rgba(19, 19, 24, 0.60); ">Our club is fully beginer friendly. We have well trained <br>hockey trianer for all types of learners.</p>
         </div>
         <hr>
-        <div class="flex space-x-20">
+        <div class="flex p-10 flex-col lg:flex-row">
           <div>
             <div class="radial-progress" style="--value:87; color: #FF4240; width: 120px; height: 120px;" role="progressbar"><span style="color: black;">87%</span></div>
             <div>
@@ -97,21 +97,21 @@
           </div>
         </div>
       </section>
-      <!-- Program Sections -->
+      <!--Section-4 Program Sections -->
       <section class="pt-20 text-center">
         <div>
           <h1 class="font-extrabold text-4xl pb-5">Program Sections</h1>
           <p class="text-base font-medium" style="color: rgba(19, 19, 24, 0.60); ">Program selection is not hastle anymore here. <br>We have enought facility to select.</p>
         </div>
-        <div class="flex pt-8 gap-4">
+        <div class="flex flex-col text-center w-fit lg:flex-row pt-8 gap-4">
           <div><img src="Images/2.png" alt=""></div>
           <div><img src="Images/3.png" alt=""></div>
         </div>
-        <div class="pt-4">
+        <div class="pt-4 sm:w-fit">
           <div><img src="Images/4.png" alt=""></div>
         </div>
       </section>
-          <!-- Our New Products -->
+          <!-- Section-5 Our New Products -->
       <section class="pt-20 text-center">
         <div>
           <h1 class="font-extrabold text-4xl pb-5">Our New Products</h1>
