--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 </head>
 
 <body>
+  
+  <!-- start -->
     <div class="m-auto w-full lg:w-[1170px]">
         <header>
           <div class="navbar bg-base-100">
@@ -57,7 +59,36 @@
             </div>
       </header>
       <main>
-          <img class="sm: w-fit lg: w-full" src="Images/1.png" alt="">
+        <div class="carousel w-full">
+          <div id="slide1" class="carousel-item relative w-full">
+            <img src="Images/1.png" class="w-full" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide4" class="btn btn-circle">❮</a> 
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide2" class="carousel-item relative w-full">
+            <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide3" class="carousel-item relative w-full">
+            <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide4" class="carousel-item relative w-full">
+            <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide3" class="btn btn-circle">❮</a> 
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
       </main>
       <!-- Section-3 Professional Hockeys Club -->
       <section class="pt-20">
@@ -304,7 +335,7 @@
         </div>
       </section>
       <!-- Section-6 client's question -->
-      <section  class="pt-28">
+      <section  class="pt-28 ">
         <div class="text-center">
           <h1 class="font-extrabold text-4xl pb-5"> Clients Question</h1>
           <p class="text-base font-medium" style="color: rgba(19, 19, 24, 0.60); ">What clients ask about us?</p>
@@ -312,7 +343,7 @@
         <div>
           <div class="hero min-h-screen">
             <div class="hero-content flex-col lg:flex-row gap-10">
-              <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl w-1/2 lg:w-full" />
               <!-- Accordian -->
               <div class="pb-20">
                 <div class="collapse collapse-plus bg-base-200 pb-15">
