--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   
   <!-- start -->
-    <div class="m-auto w-full lg:w-[1170px]">
+    <div class="m-auto w-full place-content-center  lg:w-[1170px]">
         <header>
           <div class="navbar bg-base-100">
               <div class="navbar-start">
@@ -387,7 +387,7 @@
           <p class="text-base font-medium" style="color: rgba(19, 19, 24, 0.60); ">You can write to us about anything</p>
         </div>
         <div class="flex flex-col lg:flex-row">
-          <div class="pb-15 w-1/2 lg:w-full">
+          <div class="pb-15 w-1/2 place-content-center lg:w-full">
             <div style="width: 374px; height: 216px; border-radius: 16px; background: rgba(188, 237, 109, 0.10);">
             <div><img src="Images/Group 1171275317.png" alt=""></div>
             <div style="color: rgba(19, 19, 24, 0.40); ">Phone Number</div>
@@ -423,7 +423,8 @@
             </div>
             <div class="pl-10">
               <h1>Message</h1>
-              <textarea class="textarea textarea-bordered" placeholder="Message"></textarea>
+              <textarea class="textarea textarea-bordered" placeholder="Message"></textarea><br>
+              <button class="bg-red-600 text-white font-bold" style="border-radius: 10px;">Send Message</button>
             </div>
           </div>
         </div>
