Last and final 2

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
               <div class="navbar-end">
                   <img class="w-10 h-10" src="Images/search-bar-icon-png-16.png" alt="">
-                  <a class="btn">Get Ticket</a>
+                  <a class="btn bg-red-600 text-white">Get Ticket</a>
               </div>
             </div>
       </header>
