--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
             <img src="Images/1.png" class="w-full" />
+            <div class="absolute  transform mt-20 translate-x-20 left-5 right-5  bottom-8 text-center pt-5 sm:min-w-0.5 lg:w-full" style="background-color: black; width: 30rem; height: 8rem; border-radius: 10px;">
+            <!-- <div class="-mt-20" style="width: 566px; height: 156px; border-radius: 10px; "> -->
+              <h1 class="text-2xl font-medium text-white">Meet all the heroes from the field</h1>
+              <p class="text-xs text-white">Our heroes are all rounder. <br> That means they are really strong minded</p>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide4" class="btn btn-circle">❮</a> 
               <a href="#slide2" class="btn btn-circle">❯</a>
@@ -89,6 +94,7 @@
             </div>
           </div>
         </div>
+        
       </main>
       <!-- Section-3 Professional Hockeys Club -->
       <section class="pt-20">
@@ -135,11 +141,31 @@
           <p class="text-base font-medium" style="color: rgba(19, 19, 24, 0.60); ">Program selection is not hastle anymore here. <br>We have enought facility to select.</p>
         </div>
         <div class="flex flex-col text-center w-full lg:flex-row pt-8 gap-4">
-          <div><img src="Images/2.png" alt=""></div>
-          <div><img src="Images/3.png" alt=""></div>
+          <div class="relative"><img src="Images/2.png" alt="">
+            <div class="absolute  transform mt-20 translate-x-20 left-5 right-5  bottom-8 text-center pt-5 sm:min-w-0.5 lg:w-full">
+                <h1 class="text-2xl font-medium text-white">Junior program</h1>
+                <p class="text-xs text-white">Our junior program is very fine. <br> That means they are really strong minded</p>
+                <button style="background-color: red; border-radius: 10px; color: white;">Join Now</button>
+              </div>
+          </div>
+          <div class="relative"><img src="Images/3.png" alt="">
+            <div class="absolute    bottom-8 text-center pt-5 sm:min-w-0.5 lg:w-full">
+              <h1 class="text-2xl font-medium text-white">Adult program</h1>
+              <p class="text-xs text-white">Our adult program is very fine. <br> That means they are really strong minded</p>
+              <button style="background-color: red; border-radius: 10px; color: white;">Join Now</button>
+            </div>
+        </div>
+          </div>
         </div>
         <div class="pt-4 w-fit lg:w-full">
-          <div><img src="Images/4.png" alt=""></div>
+           <div class="relative place-content-center ml-20"><img src="Images/4.png" alt="" class="place-content-center">
+            <div class="absolute  transform mt-20 translate-x-20 left-5 right-5  bottom-8 text-center pt-5 sm:min-w-0.5 lg:w-full">
+              <h1 class="text-2xl font-medium text-white">Senior program</h1>
+              <p class="text-xs text-white">Our senior program is very fine. <br> That means they are really strong minded</p>
+              <button style="background-color: red; border-radius: 10px; color: white;">Join Now</button>
+            </div> 
+        </div>
+          </div>
         </div>
       </section>
       <!-- Section-5 Our New Products -->
