--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <header>
           <div class="navbar bg-base-100">
               <div class="navbar-start">
-                <h1 class="font-extrabold">Hockey's</h1>
+                <h1 class="font-extrabold text-3xl">Hockey<span style="color: red;">'</span>s</h1>
               </div>
               <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
